--- a/leap.in
+++ b/leap.in
@@ -1,5 +1,5 @@
 source leaprc.protein.ff19SB                               
-source leaprc.gaff                                              
+source leaprc.gaff2                                              
 source leaprc.water.opc                                    
 loadamberparams frcmod.ionslm_126_opc
 set default PBradii mbondi3                  
